syntax = "proto3";

package dfs;

option go_package = "github.com/razvanmarinn/datalake/protobuf";

import "common.proto";

service DfsService {
    rpc StoreBlock(StoreBlockRequest) returns (common.WorkerResponse);
    rpc GetBlock(GetBlockRequest) returns (GetBlockResponse);
}

message StoreBlockRequest {
    string project_id = 1;
    string schema_name = 2;
    string block_id = 3;
    bytes data = 4;
}

message GetBlockRequest {
    string block_id = 1;
}

message GetBlockResponse {
    bytes data = 1;
}
